# project_1

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
hotel/: models.py  serializers.py  utils.py  views.py
hotel/migrations/: 0001_initial.py  0002_hotelroom_created_at.py  0003_alter_hotelroom_created_at.py
hotel/services/: booking_service.py  room_service.py
hotel/tests/: test_api_booking.py  test_api_hotelroom.py  test_booking.py  test_cascade_delete.py  test_hotelroom_sorting_and_filter.py  test_negative.py  test_serializers.py
