[tool.poetry]
name = "hotel-booking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
django = "^5.1.7"
djangorestframework = "^3.15.2"
dj-database-url = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
coverage = "^7.7.0"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
